2001-11-07  Kevin Vandersloot <kfv101@psu.edu>

	* procdialogs.c, interface.c, favorites.c: more mnemonics. Again
	gtk 2.0 rocks.

	* also mark strings for translation that got lost in the
	porting

2001-11-06  Kevin Vandersloot <kfv101@psu.edu>

	* interface.c, procman.c: save the disk list state

	* proctable.c: begin to properly handle when a parent node is
	removed but the children arn't

2001-11-06  Kevin Vandersloot <kfv101@psu.edu>

	* favorties: port the hidden processes dialog to GtkDialog

2001-11-06  Kevin Vandersloot <kfv101@psu.edu>

	* memmaps.c: save and restore the memmaps tree state. Also
	port the dialog to GtkDialog

	* procman.c: rename get_gconf_int_with_default to 
	gconf_client_get_int_with_default

2001-11-06  Kevin Vandersloot <kfv101@psu.edu>

	save and restore tree state

	* procman.c: new functions to save and restore the tree state
	using gconf

	* proctable.c: call the new function

2001-11-05  Kevin Vandersloot <kfv101@psu.edu>

	bring back hidden processes

	* callbacks.c: restore callbacks to hide processes

	* favorites.c: bring back all this. port to gconf and
	treeview. Remove any favorites stuff. I should change the name
	of the file now

	* interface.c: bring back menu items.

	* procdialogs.c: port hide dialog to GtkDialog

	* procman.c: save and get blacklist. Remove gconf notification
	as I'm not using it at the moment.

	* proctable.c: bring back the checking to see if a process has
	been blacklisted etc 

2001-11-05  Kevin Vandersloot <kfv101@psu.edu>

	* procdialogs.c: fix bug to get root stuff back that I 
	introduced

2001-11-04  Kevin Vandersloot <kfv101@psu.edu>

	* callbacks.c: bring back some keybindings

	* proctable.c: same here

2001-11-04  Kevin Vandersloot <kfv101@psu.edu>

	* Makefile.am: no longer need to link to pthread stuff

	* callbacks.c: double click toggles info tab

	* prettytable.c: work with libwnck

	* procactions.c: bring back root dialog stuff but doesn't seem
	to work
