@@ -1,5 +1,12 @@
 2001-11-07  Kevin Vandersloot <kfv101@psu.edu>
 
+	* prettytable.c: plug a memory leak
+
+	* favorites.c: allow the user to selection multiple process
+	to reshow
+
+2001-11-07  Kevin Vandersloot <kfv101@psu.edu>
+
 	* procdialogs.c, interface.c, favorites.c: more mnemonics. Again
 	gtk 2.0 rocks.
 
